# ROS_packages

install/: local_setup.sh  setup.sh
install/4wd-robot/share/4wd-robot/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arm_checker/lib/arm_checker/: client  server
install/arm_checker/share/arm_checker/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/bocbot/share/bocbot/: local_setup.sh  package.bash  package.sh  package.zsh
install/cpp_parameters/lib/cpp_parameters/: param_test
install/cpp_parameters/share/cpp_parameters/: local_setup.sh  package.sh
install/cpp_pub/lib/cpp_pub/: simple_pub  simple_sub
install/cpp_pub/share/cpp_pub/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
install/cpp_srvcli/lib/cpp_srvcli/: client  server
install/cpp_srvcli/share/cpp_srvcli/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/fib_test/lib/fib_test/: client  server
install/fib_test/share/fib_test/: local_setup.sh  package.bash  package.dsv  (+3 more)
launch/: launch2024.py  turtlesim_mimic_launch.py
log/: latest_build
maps/: launch2024.py  map2024.pgm  map2024.yaml
src/bocbot/: CMakeLists.txt
src/bocbot/urdf/: bocbot.gazebo  bocbot.urdf  bocbot.urdf.xacro
src/cpp_parameters/: CMakeLists.txt  package.xml
src/cpp_parameters/src/: cpp_param_node.cpp
src/cpp_pub/: CMakeLists.txt  package.xml
src/cpp_pub/src/: simple_pub.cpp  simple_sub.cpp
src/cpp_srvcli/: CMakeLists.txt
src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
src/fib_checker/: CMakeLists.txt
src/fib_checker/src/: arm_client.cpp  arm_server.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/model_4wd/: CMakeLists.txt  frames_2023-09-16_19.16.17.gv  package.xml
src/my_first_pkg/: setup.py
src/my_first_pkg/my_first_pkg/: my_first_node.py  turtle_draw.py
src/my_package/: CMakeLists.txt
src/my_package/src/: simple.cpp
src/parameter_handler/: CMakeLists.txt
src/parameter_handler/src/: cpp_parameter_handler.cpp
src/polygon_base/: CMakeLists.txt
src/polygon_base/src/: area_node.cpp
src/polygon_plugins/src/: polygon_plugins.cpp
src/rviz_control/: CMakeLists.txt
src/rviz_control/src/: publish_move.cpp
src/static_broadcast/: CMakeLists.txt  package.xml
src/tut_interfaces/: CMakeLists.txt
(+148 files in other folders)
